# htr-cremma-medieval-2026

./: .gitignore  .gitmodules  CONVENTIONS_NLP.md  CONVENTIONS_TRANSCRIPTION.md  DATA_SOURCES.md  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt
data/raw/: cremma_mss17_manifest.json
data/splits/: test.json  test_sha256.txt  train.json  val.json
experiments/: journal.jsonl
scripts/: compute_cer.py  download_corpus.py  evaluate.py  make_splits.py  run_pipeline.py  train_kraken.py  transcribe.py
src/aggregation/: aggregate.py
src/evaluation/: metrics.py
src/htr/: kraken_htr.py
src/nlp/: normalize.py
src/preprocessing/: preprocess.py
src/segmentation/: alto_parser.py  kraken_segment.py  yologen_obb.py
tests/: test_aggregation.py  test_alto_parser.py  test_metrics.py  test_nlp.py  test_preprocessing.py
